--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <meta name="description"
       content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.34" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.35" />
 
     <link rel="apple-touch-icon" sizes="1024x1024" href="images/icon1024-apple-touch.png" />
 
     <link rel="icon alternate" type="image/png" href="favicon-alt.png">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.34" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.34" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.34" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.35" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.35" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.35" media="screen" />
   </head>
 
   <body>
@@ -52,12 +52,12 @@
           :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
       <link rel="stylesheet"
-        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.34' : ''"
+        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.35' : ''"
         media="screen" />
-      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.34' : ''" media="screen" />
-      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.34' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.35' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.35' : ''" media="screen" />
       <link rel="stylesheet"
-        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.34' : ''"
+        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.35' : ''"
         media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <icon class="logo giant"></icon>
@@ -122,11 +122,11 @@
           </button>
           <button class="inline small" @click="HandleNewGameClick">
             <icon class="empty"></icon>
-            Create your own
+            Create Your Own Puzzle
             <icon class="empty"></icon>
           </button>
-          <!-- <button class="small" @click="ToggleShowGlobalCreated(event)">Player puzzles</button> -->
-          <button class="small" @click="ToggleShowTutorial(event)">How to play</button>
+          <button class="small" @click="ToggleShowGlobalCreated(event)">Anonymous Puzzles</button>
+          <button class="small" @click="ToggleShowTutorial(event)">How to Play</button>
           <button class="small" @click="ShowSettings(event)">Settings</button>
           <button title="Credits" class="small isolated" style="bottom: 0px; right: 0px; "
             @click="ToggleShowInfo(event)">
@@ -782,9 +782,9 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.34" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.35" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.34" type="module"></script>
+    <script src="scripts/facets.js?2.3.35" type="module"></script>
   </body>
 
 </html>
