--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <meta name="description"
       content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.35" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.36" />
 
     <link rel="apple-touch-icon" sizes="1024x1024" href="images/icon1024-apple-touch.png" />
 
     <link rel="icon alternate" type="image/png" href="favicon-alt.png">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.35" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.35" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.35" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.36" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.36" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.36" media="screen" />
   </head>
 
   <body>
@@ -52,12 +52,12 @@
           :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
       <link rel="stylesheet"
-        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.35' : ''"
+        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.36' : ''"
         media="screen" />
-      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.35' : ''" media="screen" />
-      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.35' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.36' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.36' : ''" media="screen" />
       <link rel="stylesheet"
-        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.35' : ''"
+        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.36' : ''"
         media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <icon class="logo giant"></icon>
@@ -115,26 +115,22 @@
           style="position: relative" class="spinner"></icon>
         <subtitle>
           <button v-if="(currentGameSolutionGuessing !== currentGameSolutionActual) || appStateUserHasCreatedAGame"
-            class="resume blink" @click="ToggleShowMeta(event)">{{resumeText}}</button>
-          <button v-if="vsShowDaily" class="small" @click="ToggleShowDailyGames(event)">
-            The Daily Facet
-            <badge :class="{show: dailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
-          </button>
-          <button class="inline small" @click="HandleNewGameClick">
-            <icon class="empty"></icon>
-            Create Your Own Puzzle
-            <icon class="empty"></icon>
-          </button>
-          <button class="small" @click="ToggleShowGlobalCreated(event)">Anonymous Puzzles</button>
-          <button class="small" @click="ToggleShowTutorial(event)">How to Play</button>
-          <button class="small" @click="ShowSettings(event)">Settings</button>
+            class="resume blink small" @click="ToggleShowMeta(event)">{{resumeText}}</button>
+          <button class="small" @click="HandleNewGameClick">Create a Puzzle</button>
+          <leftright>
+            <button v-if="vsShowDaily" class="small" @click="ToggleShowDailyGames(event)">
+              Daily
+              <badge :class="{show: dailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
+            </button>
+            <button class="small" @click="ToggleShowGlobalCreated(event)">Anonymous</button>
+          </leftright>
+          <leftright>
+            <button class="small" @click="ToggleShowTutorial(event)">How To Play</button>
+            <button class="small" @click="ShowSettings(event)">Settings</button>
+          </leftright>
           <button title="Credits" class="small isolated" style="bottom: 0px; right: 0px; "
             @click="ToggleShowInfo(event)">
             <icon class="meeples"></icon>
-          </button>
-          <button class="small highlightText" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
-            <icon class="bmc small highlightBackground"></icon>
-            Buy me a coffee!
           </button>
         </subtitle>
       </notification>
@@ -272,6 +268,11 @@
           <a class="padded" @click="ShareText('https://bigtentgames.com/facets', '')">Share with friends!</a>
           <a class="padded" href="https://discord.gg/sJ3vG3RHZd" target="_blank">Join our Discord!</a>
           <a class="padded" href="https://github.com/wilvoss/facets/issues" target="_blank">Submit a bug!</a>
+          <button class="small highlightText" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
+            <icon class="bmc small highlightBackground"></icon>
+            Buy me a coffee!
+          </button>
+
           <h3></h3>
           <version>
             <span>&copy;{{currentYear}} Big Tent Games</span>
@@ -782,9 +783,9 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.35" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.36" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.35" type="module"></script>
+    <script src="scripts/facets.js?2.3.36" type="module"></script>
   </body>
 
 </html>
