--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html itemtype="https://schema.org/VideoGame" lang="en">
 
   <head>
-    <!-- <meta http-equiv="refresh" content="0;URL=/maintenance.html" /> -->
+    <meta http-equiv="refresh" content="0;URL=/maintenance.html" />
 
     <meta charset="utf-8" />
     <meta content="x-content-type-options=nosniff" />
