--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html itemtype="https://schema.org/VideoGame" lang="en">
 
   <head>
-    <meta http-equiv="refresh" content="0;URL=/maintenance.html" />
+    <!-- <meta http-equiv="refresh" content="0;URL=/maintenance.html" /> -->
 
     <meta charset="utf-8" />
     <meta content="x-content-type-options=nosniff" />
@@ -25,16 +25,16 @@
     <meta name="description"
       content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.38" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.40" />
 
     <link rel="apple-touch-icon" sizes="1024x1024" href="images/icon1024-apple-touch.png" />
 
     <link rel="icon alternate" type="image/png" href="favicon-alt.png">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.38" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.38" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.38" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.40" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.40" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.40" media="screen" />
   </head>
 
   <body>
@@ -54,12 +54,12 @@
           :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
       <link rel="stylesheet"
-        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.38' : ''"
+        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.40' : ''"
         media="screen" />
-      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.38' : ''" media="screen" />
-      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.38' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.40' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.40' : ''" media="screen" />
       <link rel="stylesheet"
-        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.38' : ''"
+        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.40' : ''"
         media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <icon class="logo giant"></icon>
@@ -113,7 +113,7 @@
         </header>
         <p>Hi, {{appDataPlayerCurrent.name}}!</p>
         <icon
-          :class="{show: appStateIsGettingLast10Games || appStateIsGettingDailyGames || appStateIsGettingDailyGameStats}"
+          :class="{show: appStateIsGettingAnonymousGames || appStateIsGettingDailyGames || appStateIsGettingDailyGameStats}"
           style="position: relative" class="spinner"></icon>
         <subtitle>
           <button v-if="(currentGameSolutionGuessing !== currentGameSolutionActual) || appStateUserHasCreatedAGame"
@@ -423,15 +423,15 @@
           <p>Play recent puzzles created by anonymous players from around the world.</p>
 
           <leftright style="margin: 20px 0">
-            <a class="padded" :class="{disabled: appStateIsGettingLast10Games}"
-              @click="GetLast10GlobalCreatedGames;">Refresh</a>
+            <a class="padded" :class="{disabled: appStateIsGettingAnonymousGames}"
+              @click="GetRecentAnonymousGames">Refresh</a>
             <a class="padded" @click="window.open('/game/stats.html', '_blank')">Global Stats</a>
           </leftright>
 
-          <icon v-show="appStateIsGettingLast10Games" style="position: relative" class="spinner show"></icon>
+          <icon v-show="appStateIsGettingAnonymousGames" style="position: relative" class="spinner show"></icon>
 
           <message style="padding: calc(2 * var(--defaultGap)) 0"
-            v-if="!appStateIsGettingLast10Games && createdGamesWithWordSetNames.length === 0">
+            v-if="!appStateIsGettingAnonymousGames && createdGamesWithWordSetNames.length === 0">
             <p>😢</p>
             <p>There are no player puzzles to display.</p>
             <button style="margin-top: 20px; border: 1px solid hsla(var(--linkColorDarkHSL), 0.75)"
@@ -785,9 +785,9 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.38" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.40" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.38" type="module"></script>
+    <script src="scripts/facets.js?2.3.40" type="module"></script>
   </body>
 
 </html>
