--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     <meta name="description"
       content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.40" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.41" />
 
     <link rel="apple-touch-icon" sizes="1024x1024" href="images/icon1024-apple-touch.png" />
 
     <link rel="icon alternate" type="image/png" href="favicon-alt.png">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.40" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.40" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.40" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.41" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.41" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.41" media="screen" />
   </head>
 
   <body>
@@ -54,12 +54,12 @@
           :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
       <link rel="stylesheet"
-        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.40' : ''"
+        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.41' : ''"
         media="screen" />
-      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.40' : ''" media="screen" />
-      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.40' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.41' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.41' : ''" media="screen" />
       <link rel="stylesheet"
-        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.40' : ''"
+        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.41' : ''"
         media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <icon class="logo giant"></icon>
@@ -118,17 +118,30 @@
         <subtitle>
           <button v-if="(currentGameSolutionGuessing !== currentGameSolutionActual) || appStateUserHasCreatedAGame"
             class="resume blink small" @click="ToggleShowMeta(event)">{{resumeText}}</button>
-          <button class="small" @click="HandleNewGameClick">Create a Puzzle</button>
+          <button class="small inline" @click="HandleNewGameClick">
+            <icon class="edit"></icon>
+            Create a Puzzle
+          </button>
           <leftright>
-            <button v-if="vsShowDaily" class="small" @click="ToggleShowDailyGames(event)">
+            <button v-if="vsShowDaily" class="small inline" @click="ToggleShowDailyGames(event)">
+              <icon class="cal"></icon>
               Daily
               <badge :class="{show: dailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
             </button>
-            <button class="small" @click="ToggleShowGlobalCreated(event)">Anonymous</button>
+            <button class="small inline" @click="ToggleShowGlobalCreated(event)">
+              <icon class="anon"></icon>
+              Anonymous
+            </button>
           </leftright>
           <leftright>
-            <button class="small" @click="ToggleShowTutorial(event)">How To Play</button>
-            <button class="small" @click="ShowSettings(event)">Settings</button>
+            <button class="small inline" @click="ToggleShowTutorial(event)">
+              <icon class="gradcap"></icon>
+              How To
+            </button>
+            <button class="small inline" @click="ShowSettings(event)">
+              <icon class="settings"></icon>
+              Settings
+            </button>
           </leftright>
           <button title="Credits" class="small isolated" style="bottom: 0px; right: 0px; "
             @click="ToggleShowInfo(event)">
@@ -785,9 +798,9 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.40" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.41" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.40" type="module"></script>
+    <script src="scripts/facets.js?2.3.41" type="module"></script>
   </body>
 
 </html>
