--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     <meta name="description"
       content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.41" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.42" />
 
     <link rel="apple-touch-icon" sizes="1024x1024" href="images/icon1024-apple-touch.png" />
 
     <link rel="icon alternate" type="image/png" href="favicon-alt.png">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.41" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.41" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.41" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.42" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.42" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.42" media="screen" />
   </head>
 
   <body>
@@ -54,12 +54,12 @@
           :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
       <link rel="stylesheet"
-        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.41' : ''"
+        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.42' : ''"
         media="screen" />
-      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.41' : ''" media="screen" />
-      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.41' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.42' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.42' : ''" media="screen" />
       <link rel="stylesheet"
-        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.41' : ''"
+        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.42' : ''"
         media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <icon class="logo giant"></icon>
@@ -351,9 +351,18 @@
             matches
             on all your browsers. Write this ID down before changing it.</small>
           <h3>Appearance</h3>
+          <leftright>
+            <hues>
+              <hue @click="SetHueIndex(index)" v-for="(hue, index) in currentHueSet"
+                :class="{selected: index === tempUserSettingsHueIndex}" :key="'hueIndex' + index"
+                :style="{backgroundColor: 'hsl(' + hue + ', 50%, ' + (tempUserSettingsUsesLightTheme ? '70%' : '30%') + ')'}">
+              </hue>
+            </hues>
+          </leftright>
+          <small>Choose your mood.</small>
           <checkbox v-if="!appStateUseFlower" :class="{on: tempUserSettingsUsesLightTheme}"
             @click="ToggleTempUseLightTheme">
-            Light theme <toggle></toggle>
+            Light mode <toggle></toggle>
           </checkbox>
           <small v-if="!appStateUseFlower">Enable this if you want a brighter, lighter visual experience.</small>
           <checkbox :class="{on: !tempUseWordSetThemes}" @click="ToggleTempUseWordSetThemes">
@@ -798,9 +807,9 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.41" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.42" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.41" type="module"></script>
+    <script src="scripts/facets.js?2.3.42" type="module"></script>
   </body>
 
 </html>
