--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     <meta name="description"
       content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.45" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.46" />
 
     <link rel="apple-touch-icon" sizes="1024x1024" href="images/icon1024-apple-touch.png" />
 
     <link rel="icon alternate" type="image/png" href="favicon-alt.png">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.45" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.45" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.45" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.46" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.46" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.46" media="screen" />
   </head>
 
   <body>
@@ -54,12 +54,12 @@
           :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
       <link rel="stylesheet"
-        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.45' : ''"
+        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.46' : ''"
         media="screen" />
-      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.45' : ''" media="screen" />
-      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.45' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.46' : ''" media="screen" />
+      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.46' : ''" media="screen" />
       <link rel="stylesheet"
-        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.45' : ''"
+        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.46' : ''"
         media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <icon class="logo giant"></icon>
@@ -322,7 +322,7 @@
           <small>Enable this to add an extra random guessing card that doesn't belong in the solution.</small>
         </section>
         <controls>
-          <button class="secondary" @click="appStateShowCatChooser = false">Back</button>
+          <button class="secondary" @click="GetCategoryNames(); appStateShowCatChooser = false;">Back</button>
           <button @click="HandleGoButtonClick(event)">Create</button>
         </controls>
       </modal>
@@ -807,9 +807,9 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.45" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.46" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.45" type="module"></script>
+    <script src="scripts/facets.js?2.3.46" type="module"></script>
   </body>
 
 </html>
