--- a/game/stats.html
+++ b/game/stats.html
@@ -157,27 +157,28 @@
   </head>
 
   <body>
-    <app id="app" v-cloak>
-      <link rel="stylesheet" v-if="userSettingsUsesLightTheme" href="../styles/light.css" media="screen" />
-      <wrapper>
-        <header @click="window.open('/', '_blank')">
-          <icon class="logo"></icon>
-          <h2>Facets - Global Stats</h2>
-        </header>
-      </wrapper>
-      <subtitle>Oct 24, 2024 - Present <span>(Updated Hourly)</span></subtitle>
-      <icon class="spinner" :class="{show: isFetching}"></icon>
-      <stats :class="stat.key.toLowerCase()" v-for="stat in stats">
-        <message>{{stat.key}}</message>
-        <stat class="boxed" v-for="kv in stat.value">
-          <value>{{ kv.value }}</value>
-          <key>{{ kv.key }}</key>
-        </stat>
-      </stats>
-      <a v-if="!isFetching" style="margin-bottom: 40px" href="/">Open Facets</a>
-    </app>
+    <main id="app">
+      <app v-cloak>
+        <link rel="stylesheet" v-if="userSettingsUsesLightTheme" href="../styles/light.css" media="screen" />
+        <wrapper>
+          <header @click="window.open('/', '_blank')">
+            <icon class="logo"></icon>
+            <h2>Facets - Global Stats</h2>
+          </header>
+        </wrapper>
+        <subtitle>Oct 24, 2024 - Present <span>(Updated Hourly)</span></subtitle>
+        <icon class="spinner" :class="{show: isFetching}"></icon>
+        <stats :class="stat.key.toLowerCase()" v-for="stat in stats">
+          <message>{{stat.key}}</message>
+          <stat class="boxed" v-for="kv in stat.value">
+            <value>{{ kv.value }}</value>
+            <key>{{ kv.key }}</key>
+          </stat>
+        </stats>
+        <a v-if="!isFetching" style="margin-bottom: 40px" href="/">Open Facets</a>
+      </app>
+    </main>
     <script src="../helpers/console-enhancer.js" type="text/javascript"></script>
-    <script src="../helpers/vue.min.js" type="text/javascript"></script>
     <script type="module" src="../scripts/fetch-stats.js" type="text/javascript"></script>
   </body>
 
