--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
     <link rel="stylesheet" href="styles/normalize.css" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.53" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.54" media="screen" />
     <link rel="stylesheet" href="styles/checkbox.min.css" media="screen" />
   </head>
 
@@ -51,12 +51,12 @@
             :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
         </preload>
         <link rel="stylesheet"
-          v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.53' : ''"
+          v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.3.54' : ''"
           media="screen" />
-        <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.53' : ''" media="screen" />
-        <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.53' : ''" media="screen" />
+        <link rel="stylesheet" v-bind:href="loadSimplifiedTheme ? 'styles/simple.min.css?2.3.54' : ''" media="screen" />
+        <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.3.54' : ''" media="screen" />
         <link rel="stylesheet"
-          v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.53' : ''"
+          v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.3.54' : ''"
           media="screen" />
         <splash :class="{hide: appStatePageHasLoaded}">
           <icon class="logo giant"></icon>
@@ -146,17 +146,20 @@
             </button>
           </subtitle>
         </notification>
-        <pointer :class="{hidden: hidePointer}"
+        <pointer :class="{hidden: hidePointer}" :inert="hidePointer"
           :style="{left: appStatePointerLocation.left + 'px', top: appStatePointerLocation.top + 'px'}">
           <p class="pointer-text" v-html="pointerText"></p>
           <p class="controls">
-            <a v-if="(isPlayerGuessing && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length - 1) || (isPlayerCreating && appStateFirstRunCreatingIndex < appDataCreatorFirstRunItems.length - 1) || (isPlayerReviewing && appStateFirstRunReviewingIndex < appDataReviewingFirstRunItems.length - 1)"
+            <button
+              v-if="(isPlayerGuessing && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length - 1) || (isPlayerCreating && appStateFirstRunCreatingIndex < appDataCreatorFirstRunItems.length - 1) || (isPlayerReviewing && appStateFirstRunReviewingIndex < appDataReviewingFirstRunItems.length - 1)"
               @click="EndAllFirstRunTips">Stop
-              showing tips</a>
+              showing tips</button>
             <seekers>
-              <a v-if="(isPlayerGuessing && appStateFirstRunGuessingIndex > 0) || (isPlayerCreating && appStateFirstRunCreatingIndex > 0) || (isPlayerReviewing && appStateFirstRunReviewingIndex > 0)"
-                @click="HandlePreviousTipButtonPointerUp($event)" class="right">Back</a>
-              <a @click="HandleAdvanceTipButtonPointerUp($event)" class="right">{{tipSubmitText}}</a>
+              <button tabindex="0"
+                v-if="(isPlayerGuessing && appStateFirstRunGuessingIndex > 0) || (isPlayerCreating && appStateFirstRunCreatingIndex > 0) || (isPlayerReviewing && appStateFirstRunReviewingIndex > 0)"
+                @click="HandlePreviousTipButtonPointerUp($event)" class="right">Back</button>
+              <button tabindex="0" @click="HandleAdvanceTipButtonPointerUp($event)"
+                class="right">{{tipSubmitText}}</button>
             </seekers>
           </p>
         </pointer>
@@ -810,8 +813,8 @@
         </wrapper>
       </app>
     </main>
-    <script src="helpers/console-enhancer.js?2.3.53" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.53" type="module"></script>
+    <script src="helpers/console-enhancer.js?2.3.54" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.3.54" type="module"></script>
   </body>
 
 </html>
