--- a/game/stats.html
+++ b/game/stats.html
@@ -166,7 +166,7 @@
             <h2>Facets - Global Stats</h2>
           </header>
         </wrapper>
-        <subtitle>Oct 24, 2024 - Present <span>(Updated Hourly)</span></subtitle>
+        <subtitle>Updated Hourly</subtitle>
         <icon class="spinner" :class="{show: isFetching}"></icon>
         <stats :class="stat.key.toLowerCase()" v-for="stat in stats">
           <message>{{stat.key}}</message>
