--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             </gamelinks>
 
             <controls>
-              <button @click="appStateShowGlobalCreated = false">Done</button>
+              <button class="secondary" @click="appStateShowGlobalCreated = false">Back</button>
             </controls>
           </section>
         </modal>
