--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
                 <span></span>
               </button>
             </row>
+            <!-- <button title="Buy me a coffee" class="small inline"
+              @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
+              <icon class="bmc"></icon>
+              Buy me a Coffee!
+            </button> -->
             <button title="Credits" class="small isolated" style="bottom: 0px; right: 0px; "
               @click="ToggleShowInfo($event)">
               <icon class="meeples"></icon>
@@ -275,6 +280,10 @@
 
             <h3>Created by</h3>
             <credit>Wil Voss</credit>
+            <button class="small resume" onclick="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
+              <icon class="bmc small resumeBackground"></icon>
+              Buy me a coffee!
+            </button>
 
             <h3>Dedication</h3>
             <credit>Made with ❤️ for Sonna and Melinda.</credit>
@@ -298,8 +307,8 @@
             <a class="padded" @click="ShareText('https://bigtentgames.com/facets', '')">Share with friends!</a>
             <a class="padded" href="https://discord.gg/sJ3vG3RHZd" target="_blank">Join our Discord!</a>
             <a class="padded" href="https://github.com/wilvoss/facets/issues" target="_blank">Submit a bug!</a>
-            <button class="small highlightText" onclick="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
-              <icon class="bmc small highlightBackground"></icon>
+            <button class="small resume" onclick="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
+              <icon class="bmc small resumeBackground"></icon>
               Buy me a coffee!
             </button>
 
