--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
             <credit>Perdis Hawkins</credit>
             <credit>Jerry Hoffmeister</credit>
             <credit>Chris Lehan</credit>
+            <credit>Sean O'Dell</credit>
             <credit>Stacey Rea</credit>
             <credit>AJ Rogers</credit>
             <credit>Elaine Soennichsen</credit>
