--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
                 <span></span>
               </button>
             </row>
-            <!-- <button title="Buy me a coffee" class="small inline"
+            <button title="Buy me a coffee" class="small inline"
               @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
               <icon class="bmc"></icon>
               Buy me a Coffee!
-            </button> -->
+            </button>
             <button title="Credits" class="small isolated" style="bottom: 0px; right: 0px; "
               @click="ToggleShowInfo($event)">
               <icon class="meeples"></icon>
