--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
             <credit>Jaime Bortello</credit>
             <credit>Summer Bronson</credit>
             <credit>Melinda Cocolas</credit>
+            <credit>Liz G.</credit>
             <credit>Marianne Giesemann</credit>
             <credit>Perdis Hawkins</credit>
             <credit>Jerry Hoffmeister</credit>
