--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             <flogo class="giant"></flogo>
           </header>
           <p>Hi, {{appDataPlayerCurrent.name}}!</p>
+          <button v-if="!isAuthenticated && hasPlayedAsBTGAccountBefore" @click="HandleLoginClick">Log in</button>
           <icon
             :class="{show: appStateIsGettingAnonymousGames || appStateIsGettingDailyGames || appStateIsGettingDailyGameStats}"
             style="position: relative" class="spinner"></icon>
@@ -856,6 +857,7 @@
       </app>
     </main>
     <script src="/helpers/console-enhancer.js" type="text/javascript"></script>
+
     <script src="/src/facets.js" type="module"></script>
   </body>
 
